# coplanar

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: lint-test.yml
crates/body-renderer/src/: dem.rs  lib.rs  moon.rs  utils.rs
crates/coplanar/: Cargo.toml
crates/coplanar/src/: float.rs  lib.rs
crates/coplanar/src/db/: README.md  backend.rs  entry.rs  file.rs  impl.rs  index.rs  memory.rs  mod.rs  record.rs  tests.rs
crates/coplanar/src/geom/: mod.rs
crates/coplanar/src/geom/ellipse/: mod.rs  planar.rs  repr.rs  spatial.rs
crates/coplanar/src/matcher/: utils.rs
crates/coplanar/src/math/: adjugate.rs  conic.rs  invariants.rs  mod.rs
crates/coplanar/src/utils/: sampling.rs
crates/coplanar/src/vision/: camera.rs
docs/bib/: 2009.01228v2.md  kernel_generators.md
examples/: database_demo.rs  rerun_visualization.rs  simple.rs  translation.rs
src/: camera.rs  ellipse.rs  error.rs  invariants.rs  lib.rs  matcher.rs  spatial_ellipse.rs  utils.rs
src/geom/: README.md
src/geom/ellipse/: mod.rs  planar.rs  spatial.rs
src/math/: adjugate.rs  invariants.rs  mod.rs
src/vision/: camera.rs  matcher.rs  mod.rs
