[workspace]
resolver = "2"
members = ["crates/body-renderer",
    "crates/coplanar",
    "crates/body-renderer",
]


[workspace.dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
nalgebra = "0.33.0"
simba = "0.9.0"
thiserror = "1.0.65"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
