[workspace]
resolver = "2"
members = [
    "crates/coplanar",
]

[workspace.dependencies]
anyhow = "1.0.86"
nalgebra = "0.33.0"
simba = "0.9.0"
thiserror = "2.0.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

