[workspace]
resolver = "2"
members = [
    "crates/coplanar",
]

[workspace.dependencies]
anyhow = { version = "1.0.86", default-features = false }
nalgebra = { version = "0.34.1", default-features = false, features = ["alloc", "libm"] }
simba = { version = "0.9.0", default-features = false, features = ["libm"] }
thiserror = { version = "2.0.3", default-features = false }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
