[package]
name = "coplanar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
itertools = "0.13.0"
nalgebra = { workspace = true }
simba = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
#rerun = { version = "0.19.0", features = ["web_viewer"] }

#
#[[example]]
#name = "rerun"
#path = "../../examples/rerun_visualization.rs"

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "translation"
path = "../../examples/translation.rs"
