[package]
name = "coplanar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
itertools = "0.14.0"
nalgebra = { workspace = true }
num-traits = "0.2.19"
rstar = { version = "0.12.2", features = ["mint"] }
simba = { workspace = true }
thiserror = { workspace = true }
rerun = { version = "0.28.1", optional = true }

[features]
rerun = ["dep:rerun"]

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.19.1"

[[example]]
name = "rerun"
path = "../../examples/rerun_visualization.rs"
required-features = ["rerun"]

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "translation"
path = "../../examples/translation.rs"
