[package]
name = "coplanar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
nalgebra = { workspace = true }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
rstar = { version = "0.12.2", default-features = false, features = ["mint"] }
simba = { workspace = true }
thiserror = { workspace = true }
rerun = { version = "0.29.2", optional = true }

[features]
default = ["std"]
std = [
  "anyhow/std",
  "thiserror/std",
  "nalgebra/std",
  "simba/std",
  "num-traits/std",
  "itertools/use_std",
]
libm = [
  "nalgebra/libm",
  "simba/libm",
  "num-traits/libm",
]
rerun = ["std", "dep:rerun"]

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.19.1"

[[example]]
name = "rerun"
path = "../../examples/rerun_visualization.rs"
required-features = ["rerun"]

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "translation"
path = "../../examples/translation.rs"

[[example]]
name = "database_demo"
path = "../../examples/database_demo.rs"
